[gd_scene load_steps=14 format=3 uid="uid://ilei4y43xwl3"]

[ext_resource type="Script" path="res://UI/LoseMenu/LoseMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://52npqw30pwxt" path="res://assets/ButtonsV3/Input.png" id="2"]
[ext_resource type="Script" path="res://UI/SafeControl/safe_control.gd" id="2_bvhgu"]
[ext_resource type="Texture2D" uid="uid://jvvqc4manxa" path="res://assets/ButtonsV3/ButtonUp.png" id="3"]
[ext_resource type="FontFile" uid="uid://dawfg0re1svew" path="res://assets/VT323/VT323-Regular.ttf" id="5"]
[ext_resource type="Texture2D" uid="uid://4exmars5c0oj" path="res://assets/ButtonsV3/ButtonDown.png" id="6"]
[ext_resource type="Texture2D" uid="uid://xfa1vu6ckvuw" path="res://assets/ButtonsV3/SmallButtonUp.png" id="7_58k7y"]
[ext_resource type="Texture2D" uid="uid://cb7cnilm5shk8" path="res://assets/ButtonsV3/SmallButtonDown.png" id="8_guvnb"]

[sub_resource type="StyleBoxTexture" id="3"]
texture = ExtResource("2")
region_rect = Rect2(0, 0, 512, 128)

[sub_resource type="StyleBoxTexture" id="2"]
texture = ExtResource("2")
region_rect = Rect2(0, 0, 512, 128)
modulate_color = Color(0.862745, 0.862745, 0.862745, 1)

[sub_resource type="Animation" id="Animation_wfvst"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/MarginContainer/CenterContainer/VBox/VBoxContainer/SubmitScore/CenterContainer/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Submit"]
}

[sub_resource type="Animation" id="Animation_a24r4"]
resource_name = "wait_submit"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/MarginContainer/CenterContainer/VBox/VBoxContainer/SubmitScore/CenterContainer/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [".", "..", "..."]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dxxq0"]
_data = {
"RESET": SubResource("Animation_wfvst"),
"wait_submit": SubResource("Animation_a24r4")
}

[node name="LoseMenu" type="CanvasLayer"]
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
modulate = Color(0.215686, 0.215686, 0.215686, 0.556863)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 0.490196)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_bvhgu")

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Control/MarginContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="Score" type="Label" parent="Control/MarginContainer/CenterContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 96
text = "24"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/CenterContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 7
theme_override_constants/separation = 16
alignment = 1

[node name="Name" type="LineEdit" parent="Control/MarginContainer/CenterContainer/VBox/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0.392157, 0.392157, 0.392157, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("3")
theme_override_styles/focus = SubResource("2")
placeholder_text = "AAA"
alignment = 1
max_length = 3
caret_blink = true
caret_blink_interval = 0.5

[node name="SubmitScore" type="TextureButton" parent="Control/MarginContainer/CenterContainer/VBox/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource("3")
texture_pressed = ExtResource("6")

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer/CenterContainer/VBox/VBoxContainer/SubmitScore"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="Control/MarginContainer/CenterContainer/VBox/VBoxContainer/SubmitScore/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 64
text = "Submit"

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/CenterContainer/VBox/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_bottom = 32

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Restart" type="TextureButton" parent="Control/MarginContainer/MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource("7_58k7y")
texture_pressed = ExtResource("8_guvnb")

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/Restart"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="Control/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/Restart/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 64
text = "Restart"

[node name="MainMenu" type="TextureButton" parent="Control/MarginContainer/MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource("7_58k7y")
texture_pressed = ExtResource("8_guvnb")

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/MainMenu"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="Control/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/MainMenu/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 64
text = "Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dxxq0")
}

[connection signal="pressed" from="Control/MarginContainer/CenterContainer/VBox/VBoxContainer/SubmitScore" to="." method="_on_SubmitScore_pressed"]
[connection signal="pressed" from="Control/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
