[gd_scene load_steps=13 format=3 uid="uid://ilei4y43xwl3"]

[ext_resource type="Script" path="res://UI/LoseMenu/LoseMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://52npqw30pwxt" path="res://assets/ButtonsV3/Input.png" id="2"]
[ext_resource type="Script" path="res://UI/SafeControl/safe_control.gd" id="2_bvhgu"]
[ext_resource type="Texture2D" uid="uid://jvvqc4manxa" path="res://assets/ButtonsV3/ButtonUp.png" id="3"]
[ext_resource type="FontFile" uid="uid://dawfg0re1svew" path="res://assets/VT323/VT323-Regular.ttf" id="5"]
[ext_resource type="Texture2D" uid="uid://4exmars5c0oj" path="res://assets/ButtonsV3/ButtonDown.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bhmd7efq1shkw" path="res://assets/exitLeft.png" id="7_wsalk"]

[sub_resource type="StyleBoxTexture" id="3"]
texture = ExtResource("2")
region_rect = Rect2(0, 0, 512, 128)

[sub_resource type="StyleBoxTexture" id="2"]
texture = ExtResource("2")
region_rect = Rect2(0, 0, 512, 128)
modulate_color = Color(0.862745, 0.862745, 0.862745, 1)

[sub_resource type="Animation" id="Animation_wfvst"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/MarginContainer/MarginContainer/CenterContainer/VBoxContainer/SubmitScore/CenterContainer/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Submit"]
}

[sub_resource type="Animation" id="Animation_a24r4"]
resource_name = "wait_submit"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/MarginContainer/MarginContainer/CenterContainer/VBoxContainer/SubmitScore/CenterContainer/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [".", "..", "..."]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dxxq0"]
_data = {
"RESET": SubResource("Animation_wfvst"),
"wait_submit": SubResource("Animation_a24r4")
}

[node name="LoseMenu" type="CanvasLayer"]
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_bvhgu")

[node name="MarginContainerScore" type="MarginContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 144

[node name="Score" type="Label" parent="Control/MarginContainer/MarginContainerScore"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 196
text = "24"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RestartButton" type="Button" parent="Control/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 96
text = "Restart"
flat = true

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_bottom = 64

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/MarginContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 7
theme_override_constants/separation = 16
alignment = 1

[node name="Name" type="LineEdit" parent="Control/MarginContainer/MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0.392157, 0.392157, 0.392157, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("3")
theme_override_styles/focus = SubResource("2")
placeholder_text = "AAA"
alignment = 1
max_length = 12
caret_blink = true
caret_blink_interval = 0.5

[node name="SubmitScore" type="TextureButton" parent="Control/MarginContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource("3")
texture_pressed = ExtResource("6")

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer/MarginContainer/CenterContainer/VBoxContainer/SubmitScore"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="Control/MarginContainer/MarginContainer/CenterContainer/VBoxContainer/SubmitScore/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 64
text = "Submit"

[node name="ExitControl" type="Control" parent="Control/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/ExitControl"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12

[node name="TextureButton" type="TextureButton" parent="Control/MarginContainer/ExitControl/MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("7_wsalk")
texture_pressed = ExtResource("7_wsalk")
texture_hover = ExtResource("7_wsalk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dxxq0")
}

[connection signal="pressed" from="Control/MarginContainer/CenterContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/MarginContainer/CenterContainer/VBoxContainer/SubmitScore" to="." method="_on_SubmitScore_pressed"]
[connection signal="pressed" from="Control/MarginContainer/ExitControl/MarginContainer/TextureButton" to="." method="_on_exit_texture_button_pressed"]
